# whiskypedia

./: .gitignore
back/: README.md  config.py  data.json  import_json.py  import_whisky_types.py  migrate.py  pylintrc  pyproject.toml  requirements.txt  run.py
back/app/: __init__.py  dict_extension.py  models.py  repositories.py  routes.py  services.py
back/migrations/: env.py
back/migrations/versions/: 01eea5a259e0_init.py  45073f8aa78b_init.py  49869144b146_init.py
back/tests/: test_integration.py
front/: .eslintrc.js  bun.lockb  env.d.ts  eslint.config.js  index.html  package.json  vite.config.mts
front/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  typed-router.d.ts
front/src/components/: Distillerie.vue  DistilleryForm.vue  LibraryList.vue  NavBar.vue  Negociant.vue  NegociantForm.vue  NegotiantForm.vue  Notation.vue  NotationForm.vue  NotationList.vue  Notification.vue  Whisky.vue  WhiskyForm.vue  WhiskyList.vue
front/src/constants/: whisky-types.ts
front/src/layouts/: default.vue
front/src/pages/: Backup.vue  Distillerie.vue  DistillerieEdit.vue  DistillerieList.vue  Libraries.vue  Negociant.vue  NegociantEdit.vue  NegociantList.vue  Whisky.vue  WhiskyEdit.vue  index.vue
front/src/plugins/: vuetify.ts
front/src/services/: backup-services.ts  notification-services.ts
front/src/stores/: degustation.ts  distillerie.ts  images.ts  library.ts  negociant.ts  whisky.ts
front/src/types/: index.ts
