[tool.poetry]
name = "whiskypedia"
version = "0.1.0"
description = "Backend for whiskypedia app"
authors = ["adrienschricke <adrien.schricke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
alembic = "1.14.0"
astroid = "3.3.8"
blinker = "1.9.0"
click = "8.1.8"
dill = "0.3.9"
flask = "3.1.0"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
isort = "5.13.2"
itsdangerous = "2.2.0"
jinja2 = "3.1.5"
mako = "1.3.8"
markupsafe = "3.0.2"
mccabe = "0.7.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
pylint = "3.3.3"
sqlalchemy = "2.0.36"
tomlkit = "0.13.2"
typing-extensions = "4.12.2"
uuid = "1.30"
werkzeug = "3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
